--- a/_resources/clojure/style.css
+++ b/_resources/clojure/style.css
@@ -1,5 +1,5 @@
-@media (max-width: 1000px) {  body { margin: 0.5em 2em 0.5em 2em } }
 body { max-width: 40em; }
+@media (max-width: 850px) {  body { margin: 0.5em 2em 0.5em 2em; max-width: 20em; } }
 
 html, body {
     height: 100%;
