--- a/_resources/clojure/style.css
+++ b/_resources/clojure/style.css
@@ -2,7 +2,7 @@ body { max-width: 40em; }
 @media (max-width: 850px) {  body { margin: 0.5em 2em 0.5em 2em; max-width: 20em; } }
 
 html, body {
-    height: 100%;
+    height: 70%;
 }
 
 html {
@@ -29,4 +29,10 @@ h1 {
 
 input {
    max-width: 25em;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 5px;
 }
