--- a/_resources/clojure/style.css
+++ b/_resources/clojure/style.css
@@ -1,5 +1,13 @@
-body { max-width: 40em; }
-@media (max-width: 850px) {  body { margin: 0.5em 2em 0.5em 2em; max-width: 20em; } }
+body {
+    max-width: 40em;
+}
+
+@media (max-width: 850px) {
+    body {
+        margin: 0.5em 2em 0.5em 2em;
+        max-width: 20em;
+    }
+}
 
 html, body {
     height: 70%;
@@ -7,8 +15,8 @@ html, body {
 
 html {
     display: table;
-    font-family:Open Sans, Arial, sans-serif;
-    font-size:20px;
+    font-family: Open Sans, Arial, sans-serif;
+    font-size: 20px;
     margin: auto;
     margin-top: 1em;
     padding-bottom: 1em;
@@ -24,15 +32,15 @@ body {
 }
 
 h1 {
-   margin: 0.5em;
+    margin: 0.5em;
 }
 
 input {
-   max-width: 25em;
+    max-width: 25em;
 }
 
 table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  padding: 5px;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
 }
