--- a/_resources/clojure/style.css
+++ b/_resources/clojure/style.css
@@ -44,3 +44,19 @@ table, th, td {
     border-collapse: collapse;
     padding: 5px;
 }
+
+h2 {
+    font-size: 24px;
+}
+
+header {
+    font-size: 22px;
+}
+
+hr {
+    margin-top: 1.4em;
+}
+
+.highlight {
+    font-size: 26px;
+}
