--- a/_resources/clojure/style.css
+++ b/_resources/clojure/style.css
@@ -1,5 +1,6 @@
 body {
     max-width: 40em;
+    background-color: white;
 }
 
 @media (max-width: 850px) {
@@ -20,6 +21,7 @@ html {
     margin: auto;
     margin-top: 1em;
     padding-bottom: 1em;
+    background-color: whitesmoke;
 }
 
 body {
@@ -40,23 +42,57 @@ input {
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid rgb(182, 182, 182);
     border-collapse: collapse;
     padding: 5px;
+    font-weight: normal;
+}
+
+th {
+    border-bottom: 2px solid rgb(182, 182, 182);
 }
 
 h2 {
     font-size: 24px;
+    font-weight: normal;
 }
 
 header {
-    font-size: 22px;
+    font-size: 26px;
 }
 
 hr {
+    display: block;
     margin-top: 1.4em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
 }
 
 .highlight {
     font-size: 26px;
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link {
+    color: rgb(82, 73, 255);
+}
+
+a:visited {
+    color: rgb(82, 73, 255);
+}
+
+a:hover {
+    color: rgb(106, 100, 228);
+    text-decoration: underline;
+}
+
+a:active {
+    color: rgb(82, 73, 255);
 }
